# tauri

./: .dockerignore  .gitignore  BACKEND_ENDPOINTS.md  CORRECAO_OAUTH_BACKEND.md  OAUTH_FLUXO_EXPLICACAO.md  OAUTH_IMPLEMENTATION.md  SESSIONSTORAGE_EXPLICACAO.md  index.html  package-lock.json  package.json  tsconfig.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/constants/: index.ts
src/hooks/: useOAuth.ts
src/utils/: oauth.ts  window.ts
