[package]
name = "prophase"
version = "1.0.0"
description = "ProPhase - Jogue Valendo"
authors = ["Arthur e Uriel"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-deep-link = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_Graphics_Gdi"] }
open = "4.2"
